# PrintQR

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  requirements.txt
scripts/: generate-logo.sh  run-format  test-pqr
src/pqr/: __init__.py
src/pqr/data/: config.toml  pqr.toml  print-settings.toml
src/pqr/main/: app.py  cli.py  config.py  errors.py  helpers.py  lexer.py  qr.py  settings.py  shared.py  tables.py  ui.py
src/pqr/tests/: template-data.toml
